--- a/chapter1.tex
+++ b/chapter1.tex
@@ -15,42 +15,42 @@ Large Number Problem`. If it is a `problem` for standard evolutionary cosmology,
 clue in steady-state cosmology based on the Perfect Cosmological Principle (spatial and temporal
 homogeneity) [3].
 This Cosmic Fine-Tuning leads directly to a Gravitational Hydrogen model of the universe [3]
-defining the Universe horizon radius $R = 2a G \lambdabar_e$ , the factor 2 coming from the two atoms in
-Hydrogen molecule, where $\lambdabar_e = \hbar/cm_e$ is the Electron Compton reduced wavelength, and the
-gravitational coupling constant $a G = \hbar c/Gm_H m_p$ , so the speed c is eliminated. This conforms with
+defining the Universe horizon radius $R = 2a_{G} \lambdabar_{e}$ , the factor 2 coming from the two atoms in
+Hydrogen molecule, where $\lambdabar_{e} = \hbar/cm_{e}$ is the Electron Compton reduced wavelength, and the
+gravitational coupling constant $a_{G} = \hbar c/Gm_{H} m_{p}$ , so the speed c is eliminated. This conforms with
 Coherent Cosmology which needs signal celerity far exceeding c. This gives R = 13,812 Gly, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
 most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value measured
 directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower
 value of 9 %.
-Let us associate the visible universe of mass M with a matter-wave, of wavelength $\lambdabar M = \hbar /Mc = 4
+Let us associate the visible universe of mass M with a matter-wave, of wavelength $\lambdabar_{M} = \hbar /Mc = 4
 10^{-96} m$. This 'Topon' is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
 corresponding to $n ≈ 2e^e$ , to $0.01{percent}$ , The Topological Axis illustrates the function $f{n + 4} = f 2 {n}$
-and results from the imbrication of relations of form \lambdabar_e /l_{micro} ~ (l_{macro} /\lambdabar_e ) 2 , followed by $$l macro /\lambdabar_e ~
-(\lambdabar_e /l_micro )^2 :
-\lambdabar_e /\lambdabar_M ~ (R/ \lambdabar_e ) 2 ~ ( \lambdabar_e / \lambdabar_X ) 4 ~ (λ CMB / \lambdabar_e ) 8 ~ ( \lambdabar_e / \lambdabar_W ) 16 ~ (2r H / \lambdabar_e ) 32 ~ ( \lambdabar_e / l Gl ) 64 ~ ( \lambdabar_str / \lambdabar_e ) 128 ~ 2^{256}$$
-where a string wavelength ƛ str , appears, with mass about 2 MeV. So, the correlation is octuple,
+and results from the imbrication of relations of form \lambdabar_{e} /l_{micro} ~ (l_{macro} /\lambdabar_e )^{2} , followed by $$l_{macro} /\lambdabar_{e} ~
+(\lambdabar_{e} /l_{micro} )^2 :
+\lambdabar_{e} /\lambdabar_{M} ~ (R/ \lambdabar_{e} ) 2 ~ ( \lambdabar_e / \lambdabar_X ) 4 ~ (λ CMB / \lambdabar_e ) 8 ~ ( \lambdabar_{e} / \lambdabar_{W} ) 16 ~ (2r H / \lambdabar_{e} ) 32 ~ ( \lambdabar_{e} / l Gl ) 64 ~ ( \lambdabar_{str} / \lambdabar_{e} ) 128 ~ 2^{256}$$
+where a string wavelength $\lambdabar_{str}$ , appears, with mass about 2 MeV. So, the correlation is octuple,
 including, apart the two ones above, three relations which have been independently reported [3].
-The overall large number 2^{256} has an evident computational character, confirmed below by the
+The overall large number $2^{256}$ has an evident computational character, confirmed below by the
 dramatic appearance of the Eddington Large Number, and permits to approach each physical length.
-In particular, the relation R/ \lambdabar_e ~ ( CMB / \lambdabar_e ) 4 ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation incompatible with the standard vevolutionary cosmology. Of this order of
+In particular, the relation $R/ \lambdabar_{e} ~ ( CMB / \lambdabar_{e} )^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation incompatible with the standard evolutionary cosmology. Of this order of
 magnitude, we infer rather precise relations. First, considering the cosmological neutrino
-background (CNB), whose wavelength is defined by (  CNB /  CMB ) 3 = 11/4, we have R/ \lambdabar_e ~
-(  CNB 2 /  CMB \lambdabar_e ) 4 to $1.7{percent}$. Second, with the Hydrogen radius r H(0) = a\lambdabar_e , we infer R/r H(0) ~
-(4  CMB /r H(0) ) 4 precise to $0.6{percent}$. One notes that the appearance of the neutrino field is conform
+background (CNB), whose wavelength is defined by (  CNB /  CMB ) 3 = 11/4, we have $$R/ \lambdabar_e ~
+(  CNB 2 /  CMB \lambdabar_{e} ) 4 to $1.7{percent}$$. Second, with the Hydrogen radius $$r H(0) = a\lambdabar_{e} , we infer R/r H(0) ~
+(4  CMB /r H(0) ) 4$$ precise to $0.6{percent}$. One notes that the appearance of the neutrino field is conform
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
 antimatter Oscillatory Bounce [5].
 In particular, it was noted [1] that a G is of order W 8 , where W is the mass ratio W boson-
 Electron. With the above R value, one observes the following more symmetrical relation involving
 the other (neutral) weak boson Z, in the 0.01{percent} indetermination of W and Z:
-$R/√(\lambdabar_p \lambdabar_H ) ≈ (WZ) 4$
-where $\lambdabar_p$ and $\lambdabar_H$ are the Proton and Hydrogen reduced wavelengths. The precision of this formula
+$R/√(\lambdabar_{p} \lambdabar_{H}) ≈ (WZ)^4$
+where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced wavelengths. The precision of this formula
 will be pulled to the ppb range in Section III, by intervention of canonical mathematical constants.
 The gravitational Hydrogen molecule model [3] implies the following double correlation,
 which is the simplest case of Eddington's statistical theory [2]. The position of a 'reference particle'
 is supposed to be determined with an uncertainty R/2. For N particles of mass m constituting thevisible Universe, the deviance is statistically divided by √N, where N = M/m. If m is assumed to be
 the effective mass of the electron in the Hydrogen atom, m' e = m e p/H, and if, moreover, we equate
-the deviance R/(2√(M/m' e )) to the Hydrogen wavelength $\lambdabar_H = \hbar/cm H$ , we obtain the double relation:
-$R/2\lambdabar_H = √(M/m' e ) = \hbar c/Gm_e m_p$
+the deviance R/(2√(M/m\prime_{e})) to the Hydrogen wavelength $\lambdabar_{H} = \hbar/cm H$ , we obtain the double relation:
+$R/2\lambdabar_{H} = √(M/m\prime_e ) = \hbar c/Gm_{e} m_{p}$
 This is the definitive interpretation of the Double Large Number Fine-tuning. So, while the two
 pillars of Physics, Relativity and Quantum Theory are unable to conciliate Gravitation and Particle
 Physics, the third pillar, Statistical Physics, directly makes this connection in cosmology [2].
@@ -134,15 +134,15 @@ Schwarszchild relation so that each point is the center of an equivalent R-radiu
 critical mass $M = Rc 2 /2G$ and wavelength $\lambdabar M = \hbar/Mc = 2l P2 /R$, the above 'Topon'. The Bekenstein-
 Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
 Principle , only devoted to 3D application [6]:
-$S BH = \pi(R/l P )2 = 2\pi R/\lambdabar_M$
-where $l_P = (Ghbar/c^3 )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology
+$S_{BH} = \pi(R/l P )2 = 2\pi R/\lambdabar_{M}$
+where $l_{P} = (Ghbar/c^3 )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology
 use differential equations, the steady-state Cosmology must favor such integral relations. This one
 uses the Archimedes Testimony tying the Disk Area to its Perimeter.
 In the standard evolutionary view, the observed homogeneity of causally disconnected regions
 of space is known as the so-called 'horizon problem', and is at the origin of the awkward inflation
 hypothesis, which is not necessary in the steady-state model. Indeed, the critical condition is
 furnished by the above very definition of R.
-The cosmic wavelength $\lambdabar_M ~ 10^{-95} m$ breaks the 'Planck wall' by a factor $l P /\lambdabar M ~ 10^61$ : this is why this holographic relation went unnoticed. Indeed, it was admitted that l P was the quantum of Space:in fact Planck's length is only an intermediate holographic length.
+The cosmic wavelength $\lambdabar_M ~ 10^{-95} m$ breaks the 'Planck wall' by a factor $l_{P} /\lambdabar_{M} ~ 10^{61}$ : this is why this holographic relation went unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact Planck's length is only an intermediate holographic length.
 The gravitational potential energy of a critical homogeneous sphere is -(3/5)GM2/R = -
 (3/10)Mc2, while the nonrelativistic kinetic energy of galaxies is (3/10)Mc2. Their sum is therefore
 zero: the density of the so-called 'dark energy' being compatible with 7/10, this dark energy is a
@@ -150,22 +150,22 @@ trivial false problem. As recalled above, Relativity is a local theory that does
 Cosmology: galaxies actually reach speed c, and crossing the horizon, reach a Grandcosmos of
 radius R GC , given, as a first approximation, by the symmetrical holographic relation, this time
 monochrome instead of the monoradial relation above:
-$S_BH = \pi(R/l_P )^{2} = 2\piR (0) GC /l_P$
-with $R (0) GC /R = l_P /\lambdabar_M ~ 10^{61}$ . The conservation of the time constant $t = R/c, = R (0) GC /C$ introduces a canonical velocity $C ~ 10^{61} c$, making appear an energy larger than that of the visible Universe by a
+$S_{BH} = \pi(R/l_P )^{2} = 2\piR (0) GC /l_{P}$
+with $R (0) GC /R = l_{P} /\lambdabar_{M} ~ 10^{61}$ . The conservation of the time constant $t = R/c, = R (0) GC /C$ introduces a canonical velocity $C ~ 10^{61} c$, making appear an energy larger than that of the visible Universe by a
 factor $10^{122}$ , which can be identified with the $l_P$ -normalised quantum energy of vacuum, checked by
 the Casimir effect [7]. The central problem of quanto-cosmic physics is thus solved. Moreover, the
 objections against the Hawking approach using trans-plankian frequencies are wiped out [8].
-In a better approximation, justified below, R is replaced in the above relation by $R' = 2\hbar 2/Gm N3
-≈ 18.105 Gly$, where $m_N = am^e$ is the Nambu mass, of central importance in particle
+In a better approximation, justified below, R is replaced in the above relation by $R\prime = 2\hbar 2/Gm N3
+≈ 18.105 Gly$, where $m_{N} = am^{e}$ is the Nambu mass, of central importance in particle
 physics. Indeed, the half radius $R'/2$ has a simpler definition than $R/2$: it corresponds to the
 elimination of c between the classical electron radius and the Planck length. In this way, the sphere
 of radius R' appears as the spherical hologram representation of the outer Grandcosmos:
-$S'_BH = \pi(R'/l_P )^2 = 2\pi R GC /l P$
+$S\prime_{BH} = \pi(R\prime/l_{P} )^2 = 2\pi R GC /l_{P}$
 This value will be dramaticaly confirmed in the section I.IV.
 Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple
 of the mass-equivalent M of the visible Universe: m = M/N m , and its canonical wavelength is N m ƛ M ,
 allowing the following holographic extension of the above mono-radial holographic conservation:
-$S_BH = \pi(R/l_P )^2 = 2\piR/\lambdabar_M = 2\piN m R/\lambdaba_m$
+$S_{BH} = \pi(R/l_{P})^{2} = 2\piR/\lambdabar_{M} = 2\piN m R/\lambdaba_{m}$
 This series of large circles generates, by scanning, the approximation of a sphere: one thus passes
 from the Disk to the Sphere. Note that this justifies the factor 1⁄4 in the above BH entropy. But, for
 the approximation to be sufficient, the numbers N m must be very large. In this way, the Cosmos-
@@ -179,25 +179,25 @@ Gly at $0.05\%$of the above value.
 In the Hydrogen gravitational molecule model, R is defined by the following 1D-2D-3D Special
 Holographic Relation, where the wavelengths of the Electron, Proton, and Atomic and Molecular
 Hydrogen apear, as well as that of the background radiation
-$2 \pi R/\lambdabar_e = 4 \pi \lambdabar_p \lambdabar_H /l_P 2 ≈ (4\pi/3)(\lambdabar_CMB /\lambdabar_H2 )^3$
-The above relation gives $T CMB ≈ 2.73 K$. With the measured temperature of the cosmic
-background, there is a gap compatible with $(H/p G ) 2 p/6\pi 5 $, where $p G 2 = P 2 /2^{127}$ , with $P = \lambdabar_e /l_P$, . 
-This eliminates l_P , so gives a relation independent of G:
-$$2^{127} = 2\pi 2 \lambda_CMB 3 /\lambdabar_e \lambdabar_H 2$$
-=> $θ CMB = 2.725820805$ Kelvin which is the surface of the 4-sphere of radius $\lambda_CMB / \lambdabar_m$, where $\lambdabar_m = (\lambdabar_e \lambdabar_H 2 )^1/3 $, proving the relevance of
+$2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P} 2 ≈ (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}$
+The above relation gives $T_{CMB} ≈ 2.73 K$. With the measured temperature of the cosmic
+background, there is a gap compatible with $(H/p G ) 2 p/6\pi 5 $, where $p G 2 = P 2 /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$, . 
+This eliminates $l_{P}$ , so gives a relation independent of G:
+$$2^{127} = 2\pi 2 \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H} 2$$
+=> $θ_{CMB} = 2.725820805$ Kelvin which is the surface of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H} 2 )^{1/3} $, proving the relevance of
 the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi 5$ , (see Section III). Recall
-that $2^127 - 1$ is the most famous prime number in the history of Mathematics, being the last term of
+that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
 the Combinatorial Hierarchy of Special Numbers of Mersenne 3, 7, 127, the sum of which is 137.
 The critical mass is related to the elementary masses by:
-$$m P4 = M m_e m_p m_H$$
-this directly involves the mass of Planck $m_P$ , which at this day, has no known application, except
+$$m P4 = M m_{e} m_{p} m_{H}$$
+this directly involves the mass of Planck $m_{P}$ , which at this day, has no known application, except
 that it is close to the mass of the human ovocyte. In this way, the local inertia is related to the distant
 masses, in accordance with the Mach principle, which the Relativity Theory does not explain.
 Another shortcoming of this theory is that it does not define any inertial frame. However, the
 Doppler dissymmetry of the cosmic background indicates the speed of our local group of galaxies:
 630 km/s. The cosmic background is therefore tied to the Newton absolute frame, the Grandcosmos.
 The mathematical continuity being excluded by the above Calculative Principle, the associated
-time $$\lambdabar_M /c = 1.33 \times 10^{-104} s$$ is the new candidate for the 'Chronon', the 'quantum of time', so the
+time $$\lambdabar_{M} /c = 1.33 \times 10^{-104} s$$ is the new candidate for the 'Chronon', the 'quantum of time', so the
 oscillatory bounce has a frequency about $10^{104}Hz$ [5].
 
 \section {Evidence for Tachyonic Flickering Space-Time-Matter}
@@ -210,9 +210,9 @@ following considerations and observations confirm this hypothesis.
 The single-electron cosmology [3] uses the electron indeterminacy, which is the real basis of the
 Exclusion Principle, giving an horizon value R 1 only dependent of the Hydrogen radius $a' = aH/p$. It
 is the value for which the mean cosmic value is also the atomic one:
-$$Σ(1/n)/Σ(1/n 2 ) = a'$$
-with the sum running from 2 to R 1 /\lambdabar_e . This implies:
-R 1 = \lambdabar_e exp((\pi 2 /6 – 1)a' + 1 - \gamma) ≈ 15.77465 Gly
+$$Σ(1/n)/Σ(1/n 2 ) = a\prime$$
+with the sum running from 2 to R 1 /\lambdabar_{e} . This implies:
+R 1 = \lambdabar_{e} exp((\pi 2 /6 – 1)a\prime + 1 - \gamma) ≈ 15.77465 Gly
 very close (0.4 ppm) to the following expression, where $p G = P/2 127/2$ , and $β = (Η-p) -1$ is the
 Rydbergh correction factor and $p 0 = 6\pi 5$ the Canonic Lenz-Wiler Approximation of p:
 $R 1 = ( p 0 /p G ) √(βRR')$.
@@ -223,33 +223,33 @@ with p/p 0 , where p 0 = 6π 5 is the Lenz-Wyler approximation for p (Section II
 $$√(R 1 /a w l K ) ≈ 4π p/p0 <=> t_K ≈ 9 600.591445 s$$ a relation independent from G. 
 
 This $t_K$ value will be confirmed, in the ppb range, by the value
-deduced from $t K /t e = √(a G a w )$, see below, using values of a w and a G connecting, again in the ppb
+deduced from $t_{K} /t_{e} = √(a_{G} a_{w} )$, see below, using values of $a_{w} and a_{G}$ connecting, again in the ppb
 range, with Γ, the Atiyah Constant (section III.V).
 From the Holographic two-step interaction [3], it was deduced that the Kotov period is
-associated with the photon mass. With the above value, it is $$m ph = \lambdabar/c 2 t K ≈ 1.222 \times 10^{-55} kg$$, the
-graviton mass being $$m_gr = m_ph /a_w ≈ 3.722 \times 10^{-67} kg$$. The corresponding ratioes with electron mass(Fig.1) corresponds respectively to n = 24 and n = Γ , the Atiyah constant, see Section III.VIII.
+associated with the photon mass. With the above value, it is $$m ph = \lambdabar/c 2 t_{K} ≈ 1.222 \times 10^{-55} kg$$, the
+graviton mass being $$m_{gr} = m_{ph} /a__{w} \approx 3.722 \times 10^{-67} kg$$. The corresponding ratioes with electron mass(Fig.1) corresponds respectively to n = 24 and n = Γ , the Atiyah constant, see Section III.VIII.
 
 \section {The Kotov Cosmic Coherent Oscillation Period}
 
 The Kotov non-Doppler cosmic oscillation [9] is not considered seriously, since it seems to
 violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting
 this as a tachyonic phenomena, we identified the Kotov period t K ≈ 9600.06(2) s, taking the electron
-characteristic time t e = \lambdabar \cdot e /c as unit, to the simplest relation eliminating c between a G and $a_w =
-\hbar 3 /G F m e2 c$, the well measured $10^{-7}$ dimensionless electroweak coupling constant $a_w$ :
-t_K / t_e = √(a_G a_w)
-The weak coupling constant [1] $a_w = (E_F /m_e c2 ) 2$ is defined from the Fermi energy E_F ≈
-292.806161(6) GeV ≈ 573007.33(25) m_e c 2 , itself tied to the weak force constant $$G_F ≡ (\hbar c) 3 /E F 2 ≈
+characteristic time t_{e} = \lambdabar_{e} /c as unit, to the simplest relation eliminating c between $a_{G}$ and $a_w =
+\hbar 3 /G_{F} m_{e}2 c$, the well measured $10^{-7}$ dimensionless electroweak coupling constant $a_{w}$ :
+t_{K} / t_{e} = √(a_{G} a_{w})
+The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c2 ) 2$ is defined from the Fermi energy E_{F} \approx
+292.806161(6) GeV \approx 573007.33(25) m_e c 2 , itself tied to the weak force constant $$G_{F} ≡ (\hbar c) 3 /E_{F} 2 \approx
 1.4358509(7) \times 10^{-62} Joule \cdot m^3 $$[10]. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
-$$(\lambdabar_e 2/t_K )(hbar/√(m_p m_H )) = √(GG_F )$$
+$$(\lambdabar_{e} 2/t_{K} )(hbar/√(m_{p} m_{H} )) = √(GG_{F} )$$
 so the best measured cosmic quantity, the Kotov period, implies a symmetrization between
 gravitation and weak nuclear force. This specifies the G value to $10^-{6}$ precision (ppm). It is
-compatible with the well-elaborate $10^-5$ BIPM measurement [11], at several sigmas from the Codata
+compatible with the well-elaborate $10^{-5}$ BIPM measurement [11], at several sigmas from the Codata
 value [10], but the later is the mean between discordant measurements.
 Computer analysis shows that this value of G is compatible with the well-defined following
-value, with $m_P ≡ (\hbar c/G) 1/2$ and $d_e ≈ 1.001159652$ the relative electron magnetic moment :
-$$(2^{127} /a_G ) 1/2 ≈ d_e (H/p)^3
-<=> G ≈ 6.6754552 \times 10^{-11} kg^{-1} m^3 s^-2$$
+value, with $m_{P} ≡ (\hbar c/G)^{1/2}$ and $d_{e} \approx 1.001159652$ the relative electron magnetic moment :
+$$(2^{127} /a_{G} )^{1/2} \approx d_{e} (H/p)^{3}
+\Leftrightarrow G \approx 6.6754552 \times 10^{-11} kg^{-1} m^3 s^-2$$
 This value will be confirmed, in the ppb range, in Section III.
 
 \section {The omnipresence of the Kotov cycle in astrophysics}
@@ -265,7 +265,7 @@ temporal edge. Moreover, these two periods seem to be tied to the dimensions n =
 characteristics respectively of a stellar system and a galaxy, see Fig.1. As the second period was
 attributed to an earth orbital oscillation due to Jupiter effects, this suggests that the solar system is
 tied to cosmic influence. Indeed, the Kotov period shows itself rather particular in the solar system.
-In particular, the Uranus orbital radius is very close to the Kotov length $l_K = ct K$ .
+In particular, the Uranus orbital radius is very close to the Kotov length $l_{K} = ct K$ .
 Remarkable enough, a «mysterious» period ≈ 1/9 days of the Sun's pulsations has been predicted
 long before its actual discovery in 1974. Namely, 73 years ago, French amateur astronomer Sevin
 (1946) claimed that « la période propre de vibration du Soleil, c'est-à-dire la période de son infra-
@@ -275,12 +275,12 @@ and distances inside the solar system. Nevertheless, solar pulsations with exact
 discovered, after decades, – and independently of the Sevin's paper, – by a few groups of
 astrophysicists. Soon the presence of the same period, or timescale, was found in other objects of
 Cosmos too (see Kotov, 2018, and references therein) .
-Opponents emphasize often that $t_K$ is very close to 9 th harmonic of the mean terrestrial day: thecorresponding ratio – of the length of a day to the t K period – is equal to 8.99943(1), – and claim
-thus the t K oscillation of the Sun should be regarded as an artifact (see, e.g., Grec and Fossat, 1979;
+Opponents emphasize often that $t_{K}$ is very close to 9 th harmonic of the mean terrestrial day: thecorresponding ratio – of the length of a day to the $t_{K}$ period – is equal to 8.99943(1), – and claim
+thus the $t_{K}$ oscillation of the Sun should be regarded as an artifact (see, e.g., Grec and Fossat, 1979;
 Fossat et al., 2017). As a matter of fact, however, the t K period occurs to be the best commensurate
 timescale for the spin rates of all the most massive and fast-rotating bodies of the solar system, in
 general.
-This is evident from Fig. 2, which shows the resonance spectrum F(ν), calculated for 15
+This is evident from Fig. 2, which shows the resonance spectrum F(\nu), calculated for 15
 motions of 12 largest, fast spinning, objects of the system (with the mean diameters ≥ 500 km and
 periods < 2 days: six planets, three asteroids and three satellites, leaving apart trans-neptunian
 objects; see Kotov, 2018). The peak of the best commensurability corresponds to a period of
@@ -294,12 +294,12 @@ were multiplied by π). The primary peak – of the best commensurability – co
 spacial scale 9600(120) light sec., or 19.24(3) A.U., at 4.7σ C.L. (Kotov, 2013)
 Close binaries are characterized by the t 0 resonance too, with the π number as a factor of ideal
 incommensurability of motions, or frequencies (Kotov, 2018). Fig. 4 shows the resonance spectrum,
-or metrics of motion, $F 1 (ν) ≡ F(\pi \cdot ν/2)$, computed for 5746 close binaries, including cataclysmic
+or metrics of motion, $F 1 (\nu) ≡ F(\pi \cdot \nu/2)$, computed for 5746 close binaries, including cataclysmic
 variables and related objects. The major peak, with C.L. of about 7σ, corresponds to the timescale
 9590(70) s, coinciding within the error limits with $t_K$ (the stellar data were taken from all available
 binary stars catalogues and original papers).
-To compute the F 1 (ν) spectrum, the program finds – for each test frequency ν – deviations of
-ratios $(2ν i /\pi ν) k ≥ 1$ from the nearest integers, and determines then the least-square minimum of such
+To compute the $F 1 (\nu)$ spectrum, the program finds – for each test frequency ν – deviations of
+ratios $(2\nu i /\pi \nu) k ≥ 1$ from the nearest integers, and determines then the least-square minimum of such
 deviations. Here ν is the test frequency, ν i – the frequency of a given object, i = 1, 2, ...N – the
 ordinal number, with N, the total number of observed periods in a sample of objects, and the power
 k = 1 or –1. The factor of two in Eq. (2) takes into account that second half of the orbit repeats the
@@ -312,7 +312,7 @@ It was shown in fact, that a number of superfast, with periods < 2 days, exoplan
 around parent stars with periods, near-commensurate with timescales t 1 and/or 2 t 1 /π, where t 1 =
 9603(85) s agrees fairly well with the period $t_K ≈ 9600$ s of the so-called «cosmic oscillation», found
 firstly in the Sun, then – in other variable objects of the Universe (the probability that the two
-timescales would coincide by chance is near$3 \cdot 10^{-4}$ ).
+timescales would coincide by chance is near $3 \cdot 10^{-4}$).
 
 \begin{figure}
 \centering
@@ -353,8 +353,7 @@ at nearly 3.9σ significance (after Kotov, 2018).}
 \section {The Tifft, Arp and Pioneer effects}
 
 Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift [14]. Now this
-speed v 1 is compatible with $c/v 1 ≈ √a_w /a = F/a$, corresponding to the quantum resonance $$v n = nv 1 =n\hbar /r_e m_F $$, where $r_e = \lambdabar_e /a$ is the electron classical radius and $m_F = m_e √a_w$ is the Fermi mass, close to the
-mean DNA nucleotide mass [3].
+speed v 1 is compatible with $c/v 1 ≈ √a_{w} /a = F/a$, corresponding to the quantum resonance $$v n = nv 1 =n\hbar /r_{e} m_{F} $$, where $r_{e} = \lambdabar_{e} /a$ is the electron classical radius and $m_{F} = m_{e} √a_{w}$ is the Fermi mass, close to the mean DNA nucleotide mass [3].
 The Halton Arp observations of chains of galaxies with different redshifts [15] was also
 rejected. But it could be the sign of the galactic regeneration maintaining constant the visible
 Universe mass: this is confirmed by the following confirmation of the invariance of the mean mass
@@ -371,12 +370,12 @@ This seems at first sight illogical, since, fundamentally, a product is a sum of
 must be a hidden common nature for the 3 categories, mass, length and time. This sustains the
 above single electron cosmic model [3]. Moreover, this mimics the Fundamental Principle of
 Arithmetics, founded on prime numbers, but limited to the three M, L and T categories. Indeed, with t =
-R/c, summing the square of $ln(M'/m_e )$, where $M' = R'c 2 /2G$ is the critical mass in the above
-holographic sphere representing the Grandcosmos, and the square of $ln(R/\lambdabar_e ) = ln(t/t_e )$, one gets, to
+R/c, summing the square of $ln(M\prime/m_{e} )$, where $M\prime = R\prime c 2 /2G$ is the critical mass in the above
+holographic sphere representing the Grandcosmos, and the square of $ln(R/\lambdabar_{e} ) = ln(t/t_{e} )$, one gets, to
 40 ppm:
-$$ln 2 (M'/m_e ) + ln 2 (R/\lambdabar_e ) + ln 2 (t/t_e ) ≈ ln 2 (R GC /\lambdabar_e )$$
+$$ln 2 (M\prime/m_{e} ) + ln 2 (R/\lambdabar_{e}) + ln 2 (t/t_{e} ) ≈ ln 2 (R GC /\lambdabar_{e} )$$
 more precisely, to $10^{-8}$ , corresponding to $10{-7}$ precision on the above G value:
-$$ln(√(ln 2 (M'/m_e ) + ln 2 (R/\lambdabar_e ) + ln 2 (t/t_e ))) ≈ 2e – 1/2a$$
+$$ln(√(ln 2 (M\prime/m_{e} ) + ln 2 (R/\lambdabar_{e} ) + ln 2 (t/t_{e} ))) ≈ 2e – 1/2a$$
 This is a dramatic geometrical confirmation for the visible Universe – Grandcosmos holographic
 couple.
 Another crucial point in Physics is the existence of invariant fundamental constants. Thus,
@@ -396,7 +395,7 @@ discoverer of Relativity: 'use 4D space but do not confound Space and Time' has 
 forgotten, and physicist have unwisely put c = 1 in their equations.
 In his three first minutes of cosmology, one of the author obtained the length:
 $$l (ħ,G,m) = \hbar 2 /Gm 3 ≈ R/2$$
-but it took 9 years to get this published [12], and it appeared later [3] that m must be considered more precisely as the cubic root of the product $m_e m_p m_H$ . Moreover, the above critical condition
+but it took 9 years to get this published [12], and it appeared later [3] that m must be considered more precisely as the cubic root of the product $m_{e} \cdot m_{p} \cdot m_{H}$ . Moreover, the above critical condition
 links the time t = R/c and the mean mass density by the c-free formula $$ρ c = 3/8\pi Gt2 ≈ 9.41198 \times
 10^{-27} kg m^{-3}$$ , So the mainstream idea of a temporal variability of the mean density ρ c cannot be to
 sustain, meaning that ρ c must be considered as a fundamental constant. This writes:
@@ -410,24 +409,26 @@ horizon, but it must be reckognized that Relativity is a local theory, so do not
 Indeed, even General Relativity in unable to define what is a Galilean frame, while the Foucault
 pendulus shows it directly, realizing the Cosmic Microwave Background frame, identified with the
 Grandcosmos frame, as seen above.
-Introducing the Fermi constant G_F , the associated c-free length is very particular, to $1.7{percent}$:
-l{\hbar,ρ c ,G F } = \hbar/ρ c1/2 G F 1/2 ≈ 9.07154 10 9 m ≈ \lambdabar_e 2/l P
+Introducing the Fermi constant G_{F} , the associated c-free length is very particular, to $1.7{percent}$:
+$$l{\hbar,ρ c ,G_{F} } = \hbar/ρ c1/2 G_{F} 1/2 \approx 9.07154 10^{9} m \approx \lambdabar_{e} 2/l P$$
 Now, the following mandatory c-free times are close each over to $0.7{percent}$:
-$$T{\hbar,ρ c ,G F } = \hbar 4 /ρ c3/2 G F 5/2 ≈ 5.4829 10^{57} s$$
-$$T'{\hbar,G,m} = \hbar 3 /G 2 m 5 ≈ 5.5224 \times 10^{57} s$$
+$$T{\hbar,ρ c ,G_{F} } = \hbar 4 /ρ c3/2 G_{F} 5/2 \approx 5.4829 10^{57} s$$
+$$T'{\hbar,G,m} = \hbar 3 /G 2 m 5 \approx 5.5224 \times 10^{57} s$$
 This would be the periodic time of a Cycling Cosmos, which corresponds in the Topological Axis to
 the holic dimension (see below) n = 30, to 4{percent}. Comparing T with the Kotov Non-Doppler Cosmic
-Oscillation period t K ≈ 9600.60(2) s, one observes, to $0.04{percent}$:
-$$T/t_K ≈ O_M /√2$$
-where O_M is the cardinal order of the Monster Group, the largest of the 26 sporadic groups, which is
+Oscillation period $t_{K} \approx 9600.60(2)$ s, one observes, to $0.04{percent}$:
+$$T/t_{K} \approx O_{M} /√2$$
+where $O_{M}$ is the cardinal order of the Monster Group, the largest of the 26 sporadic groups, which is
 suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge
 between apparently no-connected mathematical theories [17]. The simplest interpretation of T is the
 cosmic period of all events, in a perfectly deterministic and periodic Cosmos.
-Now, introducing the above Pioneer abnormal deceleration $g_PN$ , one gets the time: $$t{G, m_e , g_PN }
-= (Gm_e /g_PN 3 ) 1/4 = (t PN 3 t'_e ) 1/4$$ , where $t_PN = c/g PN$ and $t'_e = Gm_e /c^3$ . This time is compatible with:
-$$t{G, m_e , g_PN } = t_K /(F/a)^2$$
-where the above Tifft factor F/a appears. The implication of the time $t'_e = Gm_e /c^3 = 2.2568 \times 10^{-66} s$
+Now, introducing the above Pioneer abnormal deceleration $g_{PN}$ , one gets the time: $$t{G, m_{e} , g_{PN} }
+= (Gm_{e} /g_PN 3 ) 1/4 = (t PN 3 t\prime_{e} ) 1/4$$ , where $t_{PN} = c/g_{PN}$ and $t\prime_{e} = Gm_{e} /c^{3}$ . This time is compatible with:
+$$t{G, m_{e} , g_{PN} } = t_{K} /(F/a)^{2}$$
+where the above Tifft factor F/a appears. The implication of the time $t\prime_{e} = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s$
 confirms the above Planck wall breakdown.
+
+
 
 For updating nomenclature run the following commands:
 
