--- a/Thesis-main.tex
+++ b/Thesis-main.tex
@@ -138,5 +138,5 @@ Sir Michael Atiyah.}}}
 \thispagestyle{empty}
 \mbox{}
 
-\includepdf[pages=-]{hebrew_part}
+%\includepdf[pages=-]{hebrew_part}
 \end{document}
