--- a/Thesis-main.tex
+++ b/Thesis-main.tex
@@ -64,6 +64,7 @@
 \usepackage[font={small,bf}, labelfont={small,bf}, margin=1cm]{caption}
 \usepackage{titlesec}
 \newcommand{\hsp}{\hspace{20pt}}
+\newcommand{\lambdabar}{{\mkern0.75mu\mathchar '26\mkern -9.75mu\lambda}}
 \titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter\hsp}{0pt}{\Huge\bfseries}
 
 \University{University of Paris 11}
