--- a/chapter1.tex
+++ b/chapter1.tex
@@ -21,11 +21,11 @@ gravitational coupling constant $a_{G} = \hbar c/Gm_{H} m_{p}$ , so the speed c 
 Coherent Cosmology which needs signal celerity far exceeding c. This gives R = 13,812 Gly, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
 most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value measured
 directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower
-value of 9 %.
+value of 9\%.
 Let us associate the visible universe of mass M with a matter-wave, of wavelength $\lambdabar_{M} = \hbar /Mc = 4
 10^{-96} m$. This 'Topon' is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
-corresponding to $n ≈ 2e^e$ , to $0.01{percent}$ , The Topological Axis illustrates the function $f{n + 4} = f 2 {n}$
-and results from the imbrication of relations of form \lambdabar_{e} /l_{micro} ~ (l_{macro} /\lambdabar_e )^{2} , followed by $$l_{macro} /\lambdabar_{e} ~
+corresponding to $n \approx 2e^{e}$ , to $0.01\%$ , The Topological Axis illustrates the function $f{n + 4} = f 2 {n}$
+and results from the imbrication of relations of form $\lambdabar_{e} /l_{micro} ~ (l_{macro} /\lambdabar_e )^{2} $, followed by $$l_{macro} /\lambdabar_{e} ~
 (\lambdabar_{e} /l_{micro} )^2 :
 \lambdabar_{e} /\lambdabar_{M} ~ (R/ \lambdabar_{e} ) 2 ~ ( \lambdabar_e / \lambdabar_X ) 4 ~ (λ CMB / \lambdabar_e ) 8 ~ ( \lambdabar_{e} / \lambdabar_{W} ) 16 ~ (2r H / \lambdabar_{e} ) 32 ~ ( \lambdabar_{e} / l Gl ) 64 ~ ( \lambdabar_{str} / \lambdabar_{e} ) 128 ~ 2^{256}$$
 where a string wavelength $\lambdabar_{str}$ , appears, with mass about 2 MeV. So, the correlation is octuple,
@@ -36,7 +36,7 @@ In particular, the relation $R/ \lambdabar_{e} ~ ( CMB / \lambdabar_{e} )^{4}
 magnitude, we infer rather precise relations. First, considering the cosmological neutrino
 background (CNB), whose wavelength is defined by (  CNB /  CMB ) 3 = 11/4, we have $$R/ \lambdabar_e ~
 (  CNB 2 /  CMB \lambdabar_{e} ) 4 to $1.7{percent}$$. Second, with the Hydrogen radius $$r H(0) = a\lambdabar_{e} , we infer R/r H(0) ~
-(4  CMB /r H(0) ) 4$$ precise to $0.6{percent}$. One notes that the appearance of the neutrino field is conform
+(4  CMB /r H(0) ) 4$$ precise to $0.6\%$. One notes that the appearance of the neutrino field is conform
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
 antimatter Oscillatory Bounce [5].
 In particular, it was noted [1] that a G is of order W 8 , where W is the mass ratio W boson-
@@ -152,7 +152,7 @@ radius R GC , given, as a first approximation, by the symmetrical holographic re
 monochrome instead of the monoradial relation above:
 $S_{BH} = \pi(R/l_P )^{2} = 2\piR (0) GC /l_{P}$
 with $R (0) GC /R = l_{P} /\lambdabar_{M} ~ 10^{61}$ . The conservation of the time constant $t = R/c, = R (0) GC /C$ introduces a canonical velocity $C ~ 10^{61} c$, making appear an energy larger than that of the visible Universe by a
-factor $10^{122}$ , which can be identified with the $l_P$ -normalised quantum energy of vacuum, checked by
+factor $10^{122}$ , which can be identified with the $l_{P}$ -normalised quantum energy of vacuum, checked by
 the Casimir effect [7]. The central problem of quanto-cosmic physics is thus solved. Moreover, the
 objections against the Hawking approach using trans-plankian frequencies are wiped out [8].
 In a better approximation, justified below, R is replaced in the above relation by $R\prime = 2\hbar 2/Gm N3
@@ -394,7 +394,7 @@ believed to be the single mandatory foundation of Space-Time. The warning of Poi
 discoverer of Relativity: 'use 4D space but do not confound Space and Time' has long been
 forgotten, and physicist have unwisely put c = 1 in their equations.
 In his three first minutes of cosmology, one of the author obtained the length:
-$$l (ħ,G,m) = \hbar 2 /Gm 3 ≈ R/2$$
+$$l (\hbar,G,m) = \hbar 2 /Gm 3 ≈ R/2$$
 but it took 9 years to get this published [12], and it appeared later [3] that m must be considered more precisely as the cubic root of the product $m_{e} \cdot m_{p} \cdot m_{H}$ . Moreover, the above critical condition
 links the time t = R/c and the mean mass density by the c-free formula $$ρ c = 3/8\pi Gt2 ≈ 9.41198 \times
 10^{-27} kg m^{-3}$$ , So the mainstream idea of a temporal variability of the mean density ρ c cannot be to
@@ -411,7 +411,7 @@ pendulus shows it directly, realizing the Cosmic Microwave Background frame, ide
 Grandcosmos frame, as seen above.
 Introducing the Fermi constant G_{F} , the associated c-free length is very particular, to $1.7{percent}$:
 $$l{\hbar,ρ c ,G_{F} } = \hbar/ρ c1/2 G_{F} 1/2 \approx 9.07154 10^{9} m \approx \lambdabar_{e} 2/l P$$
-Now, the following mandatory c-free times are close each over to $0.7{percent}$:
+Now, the following mandatory c-free times are close each over to $0.7\%$:
 $$T{\hbar,ρ c ,G_{F} } = \hbar 4 /ρ c3/2 G_{F} 5/2 \approx 5.4829 10^{57} s$$
 $$T'{\hbar,G,m} = \hbar 3 /G 2 m 5 \approx 5.5224 \times 10^{57} s$$
 This would be the periodic time of a Cycling Cosmos, which corresponds in the Topological Axis to
